# bevy_audio_widgets

./: Cargo.toml  LICENSE  README.md
examples/: audio_in.rs  tuner.rs  use_common.rs  waveform.rs
examples/common/: audio_in.rs  mod.rs
figs/: wavebuf.drawio  wavebuf2.drawio
src/: lib.rs  wave_buffer.rs
