[package]
name = "bevy_audio_widgets"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
# bevy = "0.18.1"


[dev-dependencies]
anyhow = "1.0.102"
cpal = { version = "0.17.3", features = ["jack"] }
clap = { version = "4.6.1", features = ["derive"] }
